fixed sponsor content overflow

--- a/symposion/static/less/site.less
+++ b/symposion/static/less/site.less
@@ -504,6 +504,7 @@ nav#slider-nav {
     border:3px solid #f7f7f3;
     padding:15px;
     height:450px;
+    overflow:auto;
   }
 
   h2 {
